fixed social icons on tablet and desktop view

--- a/css/main.css
+++ b/css/main.css
@@ -554,7 +554,7 @@ footer .social-icons p i {
     line-height: 2;
   }
   footer .social {
-    width: 55%;
+    width: 30%;
     margin: auto;
   }
 
